redux working fixed alignment

--- a/nelp-views/src/styles/info_card.css
+++ b/nelp-views/src/styles/info_card.css
@@ -1,4 +1,5 @@
 .info-card {
+  vertical-align: top;
   background-color: #fff;
   width: 300px;
   height: 530px;
@@ -18,7 +19,7 @@
 }
 
 .link-button {
-  padding: 20px;
+  padding: 2px 15px;
   background-color: black;
   color: white;
   font-family: monospace;
